tests/e2e/semantics/return_outside2.error
Error: syntax error in story at line 2, column 5

2|        return
          ^^^^^^

E0004: `return` is allowed only inside functions
